pipeline/src/parser.output
   0  $accept : %entry% $end

   1  program : program_with_headers EOF

   2  program_with_headers : includs decls
   3                       | decls

   4  includs : includs includ
   5          | includ

   6  includ : INCLUDE STRING SEMI

   7  decls :
   8        | stmt decls
   9        | tdecl_or_fdecl decls

  10  tdecl_or_fdecl : fdecl
  11                 | tdecl

  12  fdecl : FUN ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

  13  tdecl : TUPLE TID LBRACE tup_item_list RBRACE

  14  tup_item_list : tup_item
  15                | tup_item_list COMMA tup_item

  16  tup_item : ID
  17           | ID COLON tup_typ

  18  tup_typ : INTEGER
  19          | REAL
  20          | TEXT

  21  formals_opt :
  22              | formal_list

  23  formal_list : ID
  24              | formal_list COMMA ID

  25  stmt_list :
  26            | stmt_list stmt

  27  stmt : expr SEMI
  28       | LBRACE stmt_list RBRACE
  29       | IF LPAREN expr RPAREN stmt
  30       | IF LPAREN expr RPAREN stmt ELSE stmt
  31       | FOR ID IN expr LBRACE stmt_list RBRACE
  32       | FOR ID IN expr COLON stmt
  33       | WHILE LPAREN expr RPAREN stmt
  34       | BREAK SEMI
  35       | CONTINUE SEMI
  36       | RETURN SEMI
  37       | RETURN expr SEMI

  38  obj : ID
  39      | obj LBRACK expr RBRACK

  40  appended_obj : obj
  41               | obj DOLLAR ID
  42               | obj DOLLAR LPAREN expr RPAREN
  43               | obj LBRACK expr_opt COLON expr_opt RBRACK
  44               | obj LBRACK RBRACK

  45  lhs_appended_obj : appended_obj
  46                   | AT obj LBRACK expr RBRACK

  47  expr_opt :
  48           | expr

  49  expr : LITERAL
  50       | FLOAT
  51       | STRING
  52       | TRUE
  53       | FALSE
  54       | appended_obj
  55       | expr PLUS expr
  56       | expr MINUS expr
  57       | expr TIMES expr
  58       | expr DIVIDE expr
  59       | expr EQ expr
  60       | expr NEQ expr
  61       | expr LT expr
  62       | expr LEQ expr
  63       | expr GT expr
  64       | expr GEQ expr
  65       | expr AND expr
  66       | expr OR expr
  67       | MINUS expr
  68       | NOT expr
  69       | lhs_appended_obj ASSIGN expr
  70       | ID LPAREN actuals_opt RPAREN
  71       | TID
  72       | TID LBRACK RBRACK
  73       | LBRACK actuals_opt RBRACK
  74       | LPAREN expr RPAREN

  75  actuals_opt :
  76              | actuals_list

  77  actuals_list : expr
  78               | actuals_list COMMA expr

  79  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (79)
	decls : .  (7)

	LPAREN  shift 3
	LBRACE  shift 4
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	INCLUDE  shift 15
	TUPLE  shift 16
	BREAK  shift 17
	CONTINUE  shift 18
	FUN  shift 19
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	EOF  reduce 7

	program  goto 25
	program_with_headers  goto 26
	includs  goto 27
	decls  goto 28
	includ  goto 29
	stmt  goto 30
	tdecl_or_fdecl  goto 31
	fdecl  goto 32
	tdecl  goto 33
	expr  goto 34
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr : LPAREN . expr RPAREN  (74)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 38
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 4
	stmt : LBRACE . stmt_list RBRACE  (28)
	stmt_list : .  (25)

	.  reduce 25

	stmt_list  goto 39


state 5
	expr : LBRACK . actuals_opt RBRACK  (73)
	actuals_opt : .  (75)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	RBRACK  reduce 75

	expr  goto 40
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37
	actuals_opt  goto 41
	actuals_list  goto 42


state 6
	lhs_appended_obj : AT . obj LBRACK expr RBRACK  (46)

	ID  shift 43
	.  error

	obj  goto 44


state 7
	expr : MINUS . expr  (67)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 45
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 8
	expr : NOT . expr  (68)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 46
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 9
	expr : TRUE .  (52)

	.  reduce 52


state 10
	expr : FALSE .  (53)

	.  reduce 53


state 11
	stmt : RETURN . SEMI  (36)
	stmt : RETURN . expr SEMI  (37)

	SEMI  shift 47
	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 48
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 12
	stmt : IF . LPAREN expr RPAREN stmt  (29)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (30)

	LPAREN  shift 49
	.  error


state 13
	stmt : FOR . ID IN expr LBRACE stmt_list RBRACE  (31)
	stmt : FOR . ID IN expr COLON stmt  (32)

	ID  shift 50
	.  error


state 14
	stmt : WHILE . LPAREN expr RPAREN stmt  (33)

	LPAREN  shift 51
	.  error


state 15
	includ : INCLUDE . STRING SEMI  (6)

	STRING  shift 52
	.  error


state 16
	tdecl : TUPLE . TID LBRACE tup_item_list RBRACE  (13)

	TID  shift 53
	.  error


state 17
	stmt : BREAK . SEMI  (34)

	SEMI  shift 54
	.  error


state 18
	stmt : CONTINUE . SEMI  (35)

	SEMI  shift 55
	.  error


state 19
	fdecl : FUN . ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (12)

	ID  shift 56
	.  error


state 20
	expr : LITERAL .  (49)

	.  reduce 49


state 21
	expr : FLOAT .  (50)

	.  reduce 50


state 22
	expr : STRING .  (51)

	.  reduce 51


state 23
	obj : ID .  (38)
	expr : ID . LPAREN actuals_opt RPAREN  (70)

	LPAREN  shift 57
	SEMI  reduce 38
	RPAREN  reduce 38
	LBRACE  reduce 38
	LBRACK  reduce 38
	RBRACK  reduce 38
	COMMA  reduce 38
	COLON  reduce 38
	PLUS  reduce 38
	MINUS  reduce 38
	TIMES  reduce 38
	DIVIDE  reduce 38
	ASSIGN  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	LT  reduce 38
	LEQ  reduce 38
	GT  reduce 38
	GEQ  reduce 38
	AND  reduce 38
	OR  reduce 38
	DOLLAR  reduce 38


state 24
	expr : TID .  (71)
	expr : TID . LBRACK RBRACK  (72)

	LBRACK  shift 58
	SEMI  reduce 71
	RPAREN  reduce 71
	LBRACE  reduce 71
	RBRACK  reduce 71
	COMMA  reduce 71
	COLON  reduce 71
	PLUS  reduce 71
	MINUS  reduce 71
	TIMES  reduce 71
	DIVIDE  reduce 71
	EQ  reduce 71
	NEQ  reduce 71
	LT  reduce 71
	LEQ  reduce 71
	GT  reduce 71
	GEQ  reduce 71
	AND  reduce 71
	OR  reduce 71


state 25
	%entry% : '\001' program .  (79)

	.  reduce 79


state 26
	program : program_with_headers . EOF  (1)

	EOF  shift 59
	.  error


state 27
	program_with_headers : includs . decls  (2)
	includs : includs . includ  (4)
	decls : .  (7)

	LPAREN  shift 3
	LBRACE  shift 4
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	INCLUDE  shift 15
	TUPLE  shift 16
	BREAK  shift 17
	CONTINUE  shift 18
	FUN  shift 19
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	EOF  reduce 7

	decls  goto 60
	includ  goto 61
	stmt  goto 30
	tdecl_or_fdecl  goto 31
	fdecl  goto 32
	tdecl  goto 33
	expr  goto 34
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 28
	program_with_headers : decls .  (3)

	.  reduce 3


state 29
	includs : includ .  (5)

	.  reduce 5


state 30
	decls : stmt . decls  (8)
	decls : .  (7)

	LPAREN  shift 3
	LBRACE  shift 4
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	TUPLE  shift 16
	BREAK  shift 17
	CONTINUE  shift 18
	FUN  shift 19
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	EOF  reduce 7

	decls  goto 62
	stmt  goto 30
	tdecl_or_fdecl  goto 31
	fdecl  goto 32
	tdecl  goto 33
	expr  goto 34
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 31
	decls : tdecl_or_fdecl . decls  (9)
	decls : .  (7)

	LPAREN  shift 3
	LBRACE  shift 4
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	TUPLE  shift 16
	BREAK  shift 17
	CONTINUE  shift 18
	FUN  shift 19
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	EOF  reduce 7

	decls  goto 63
	stmt  goto 30
	tdecl_or_fdecl  goto 31
	fdecl  goto 32
	tdecl  goto 33
	expr  goto 34
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 32
	tdecl_or_fdecl : fdecl .  (10)

	.  reduce 10


state 33
	tdecl_or_fdecl : tdecl .  (11)

	.  reduce 11


state 34
	stmt : expr . SEMI  (27)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)

	SEMI  shift 64
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 35
	obj : obj . LBRACK expr RBRACK  (39)
	appended_obj : obj .  (40)
	appended_obj : obj . DOLLAR ID  (41)
	appended_obj : obj . DOLLAR LPAREN expr RPAREN  (42)
	appended_obj : obj . LBRACK expr_opt COLON expr_opt RBRACK  (43)
	appended_obj : obj . LBRACK RBRACK  (44)

	LBRACK  shift 77
	DOLLAR  shift 78
	SEMI  reduce 40
	RPAREN  reduce 40
	LBRACE  reduce 40
	RBRACK  reduce 40
	COMMA  reduce 40
	COLON  reduce 40
	PLUS  reduce 40
	MINUS  reduce 40
	TIMES  reduce 40
	DIVIDE  reduce 40
	ASSIGN  reduce 40
	EQ  reduce 40
	NEQ  reduce 40
	LT  reduce 40
	LEQ  reduce 40
	GT  reduce 40
	GEQ  reduce 40
	AND  reduce 40
	OR  reduce 40


state 36
	lhs_appended_obj : appended_obj .  (45)
	expr : appended_obj .  (54)

	SEMI  reduce 54
	RPAREN  reduce 54
	LBRACE  reduce 54
	RBRACK  reduce 54
	COMMA  reduce 54
	COLON  reduce 54
	PLUS  reduce 54
	MINUS  reduce 54
	TIMES  reduce 54
	DIVIDE  reduce 54
	ASSIGN  reduce 45
	EQ  reduce 54
	NEQ  reduce 54
	LT  reduce 54
	LEQ  reduce 54
	GT  reduce 54
	GEQ  reduce 54
	AND  reduce 54
	OR  reduce 54


state 37
	expr : lhs_appended_obj . ASSIGN expr  (69)

	ASSIGN  shift 79
	.  error


state 38
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : LPAREN expr . RPAREN  (74)

	RPAREN  shift 80
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 39
	stmt_list : stmt_list . stmt  (26)
	stmt : LBRACE stmt_list . RBRACE  (28)

	LPAREN  shift 3
	LBRACE  shift 4
	RBRACE  shift 81
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	BREAK  shift 17
	CONTINUE  shift 18
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	stmt  goto 82
	expr  goto 34
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 40
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	actuals_list : expr .  (77)

	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	RPAREN  reduce 77
	RBRACK  reduce 77
	COMMA  reduce 77


state 41
	expr : LBRACK actuals_opt . RBRACK  (73)

	RBRACK  shift 83
	.  error


state 42
	actuals_opt : actuals_list .  (76)
	actuals_list : actuals_list . COMMA expr  (78)

	COMMA  shift 84
	RPAREN  reduce 76
	RBRACK  reduce 76


state 43
	obj : ID .  (38)

	.  reduce 38


state 44
	obj : obj . LBRACK expr RBRACK  (39)
	lhs_appended_obj : AT obj . LBRACK expr RBRACK  (46)

	LBRACK  shift 85
	.  error


state 45
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : MINUS expr .  (67)

	.  reduce 67


state 46
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
	expr : NOT expr .  (68)

	.  reduce 68


state 47
	stmt : RETURN SEMI .  (36)

	.  reduce 36


state 48
	stmt : RETURN expr . SEMI  (37)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)

	SEMI  shift 86
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 49
	stmt : IF LPAREN . expr RPAREN stmt  (29)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (30)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 87
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 50
	stmt : FOR ID . IN expr LBRACE stmt_list RBRACE  (31)
	stmt : FOR ID . IN expr COLON stmt  (32)

	IN  shift 88
	.  error


state 51
	stmt : WHILE LPAREN . expr RPAREN stmt  (33)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 89
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 52
	includ : INCLUDE STRING . SEMI  (6)

	SEMI  shift 90
	.  error


state 53
	tdecl : TUPLE TID . LBRACE tup_item_list RBRACE  (13)

	LBRACE  shift 91
	.  error


state 54
	stmt : BREAK SEMI .  (34)

	.  reduce 34


state 55
	stmt : CONTINUE SEMI .  (35)

	.  reduce 35


state 56
	fdecl : FUN ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (12)

	LPAREN  shift 92
	.  error


state 57
	expr : ID LPAREN . actuals_opt RPAREN  (70)
	actuals_opt : .  (75)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	RPAREN  reduce 75

	expr  goto 40
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37
	actuals_opt  goto 93
	actuals_list  goto 42


state 58
	expr : TID LBRACK . RBRACK  (72)

	RBRACK  shift 94
	.  error


state 59
	program : program_with_headers EOF .  (1)

	.  reduce 1


state 60
	program_with_headers : includs decls .  (2)

	.  reduce 2


state 61
	includs : includs includ .  (4)

	.  reduce 4


state 62
	decls : stmt decls .  (8)

	.  reduce 8


state 63
	decls : tdecl_or_fdecl decls .  (9)

	.  reduce 9


state 64
	stmt : expr SEMI .  (27)

	.  reduce 27


state 65
	expr : expr PLUS . expr  (55)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 95
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 66
	expr : expr MINUS . expr  (56)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 96
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 67
	expr : expr TIMES . expr  (57)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 97
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 68
	expr : expr DIVIDE . expr  (58)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 98
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 69
	expr : expr EQ . expr  (59)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 99
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 70
	expr : expr NEQ . expr  (60)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 100
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 71
	expr : expr LT . expr  (61)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 101
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 72
	expr : expr LEQ . expr  (62)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 102
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 73
	expr : expr GT . expr  (63)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 103
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 74
	expr : expr GEQ . expr  (64)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 104
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 75
	expr : expr AND . expr  (65)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 105
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 76
	expr : expr OR . expr  (66)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 106
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 77
	obj : obj LBRACK . expr RBRACK  (39)
	appended_obj : obj LBRACK . expr_opt COLON expr_opt RBRACK  (43)
	appended_obj : obj LBRACK . RBRACK  (44)
	expr_opt : .  (47)

	LPAREN  shift 3
	LBRACK  shift 5
	RBRACK  shift 107
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	COLON  reduce 47

	expr  goto 108
	obj  goto 35
	appended_obj  goto 36
	expr_opt  goto 109
	lhs_appended_obj  goto 37


state 78
	appended_obj : obj DOLLAR . ID  (41)
	appended_obj : obj DOLLAR . LPAREN expr RPAREN  (42)

	LPAREN  shift 110
	ID  shift 111
	.  error


state 79
	expr : lhs_appended_obj ASSIGN . expr  (69)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 112
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 80
	expr : LPAREN expr RPAREN .  (74)

	.  reduce 74


state 81
	stmt : LBRACE stmt_list RBRACE .  (28)

	.  reduce 28


state 82
	stmt_list : stmt_list stmt .  (26)

	.  reduce 26


state 83
	expr : LBRACK actuals_opt RBRACK .  (73)

	.  reduce 73


state 84
	actuals_list : actuals_list COMMA . expr  (78)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 113
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 85
	obj : obj LBRACK . expr RBRACK  (39)
	lhs_appended_obj : AT obj LBRACK . expr RBRACK  (46)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 114
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 86
	stmt : RETURN expr SEMI .  (37)

	.  reduce 37


state 87
	stmt : IF LPAREN expr . RPAREN stmt  (29)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (30)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)

	RPAREN  shift 115
	PLUS  shift 65
	MINUS  shift 66
	TIMES  shift 67
	DIVIDE  shift 68
	EQ  shift 69
	NEQ  shift 70
	LT  shift 71
	LEQ  shift 72
	GT  shift 73
	GEQ  shift 74
	AND  shift 75
	OR  shift 76
	.  error


state 88
	stmt : FOR ID IN . expr LBRACE stmt_list RBRACE  (31)
	stmt : FOR ID IN . expr COLON stmt  (32)

	LPAREN  shift 3
	LBRACK  shift 5
	AT  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 20
	FLOAT  shift 21
	STRING  shift 22
	ID  shift 23
	TID  shift 24
	.  error

	expr  goto 116
	obj  goto 35
	appended_obj  goto 36
	lhs_appended_obj  goto 37


state 89
	stmt : WHILE LPAREN expr . RPAREN stmt  (33)
	expr : expr . PLUS expr  (55)
	expr : expr . MINUS expr  (56)
	expr : expr . TIMES expr  (57)
	expr : expr . DIVIDE expr  (58)
	expr : expr . EQ expr  (59)
	expr : expr . NEQ expr  (60)
	expr : expr . LT expr  (61)
	expr : expr . LEQ expr  (62)
	expr : expr . GT expr  (63)
	expr : expr . GEQ expr  (64)
	expr : expr . AND expr  (65)
	expr : expr . OR expr  (66)
